Настроен запуск стэнда

--- a/sandbox.parent/sandbox.client/front/pug/index.product.pug
+++ b/sandbox.parent/sandbox.client/front/pug/index.product.pug
@@ -1,9 +1,9 @@
 extends _page
 
 block head
-  title greetgo! Access
+  title greetgo! Sandbox
   script window.urlPrefix = '../api'
 
 block body
-  access-app
-  script(src="boot.js", type="text/javascript")
+  root-component
+  script(src="main.js", type="text/javascript")
