--- a/sandbox.parent/sandbox.client/front/pug/index.stand.pug
+++ b/sandbox.parent/sandbox.client/front/pug/index.stand.pug
@@ -1,9 +1,9 @@
 extends _page
 
 block head
-  title Access Stand
+  title Sandbox Stand
   script window.urlPrefix = 'http://' + location.hostname + ':1313/access/api';
 
 block body
-  access-app
-  script(src="boot.js", type="text/javascript")
+  root-component
+  script(src="main.js", type="text/javascript")
