--- a/sandbox.client/front/ts/app/clients/change.component.html
+++ b/sandbox.client/front/ts/app/clients/change.component.html
@@ -1,12 +1,12 @@
 
 <!--  MODAL FORM FOR CHANGE CLIENT INFORMATION  -->
-<div class="modal-form">
+<div *ngIf="visible" class="modal-form">
   <div class="modal-form-content">
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-11"></div>
         <div class="col-xs-1">
-         <span class="closeModal" (click)="close.emit()">
+         <span class="closeModal" (click)="saved.emit()">
         &nbsp;X&nbsp;
       </span>
         </div>
@@ -17,7 +17,7 @@
         <h3>Произошла ошибка при загрузке данных, попробуйте снова</h3>
       </div>
       <div *ngIf="errors === 'loadingClient'" action="" class="text-center">
-        <h3>Идет загрузка...</h3>
+        <h3>Идет загрузка данных...</h3>
       </div>
       <div *ngIf="errors === 'savingClient'" action="" class="text-center">
        <h3> Сохраняем...</h3>
