Исправлены некоторые баги

--- a/sandbox.client/front/ts/app/clients/change.component.html
+++ b/sandbox.client/front/ts/app/clients/change.component.html
@@ -145,7 +145,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <input *ngIf="change" (click)="saveChangedClient()" type="submit" value="Сохранить">
+            <input *ngIf="change" (click)="closeForm()" type="submit" value="Сохранить">
             <input *ngIf="add" (click)="addClient()" type="submit" value="Добавить">
           </div>
         </div>
