--- a/sandbox.client/front/ts/app/clients/list.component.html
+++ b/sandbox.client/front/ts/app/clients/list.component.html
@@ -49,6 +49,6 @@
 <!-- ////////////////////////////////////////////// -->
 <change-component
   #changeForm
-  (saved)="closeModalForm()"
+  (saved)="closeModalForm($event)"
 >
 </change-component>
