--- a/sandbox.client/front/ts/app/clients/change.component.html
+++ b/sandbox.client/front/ts/app/clients/change.component.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-xs-11"></div>
         <div class="col-xs-1">
-         <span class="closeModal" (click)="saved.emit()">
+         <span class="closeModal" (click)="closeForm()">
         &nbsp;X&nbsp;
       </span>
         </div>
