--- a/sandbox.client/front/ts/app/clients/list.component.html
+++ b/sandbox.client/front/ts/app/clients/list.component.html
@@ -6,7 +6,12 @@
     </div>
   </div>
   <div class="row ">
-    <div class="col-xs-3">Ф.И.О</div>
+    <div class="col-xs-3">Ф.И.О <input
+      [(ngModel)]="listInfo.filter"
+      [ngModelOptions]="{standalone: true}"
+      type="text">
+      <button (click)="loadFilteredList()">find</button>
+    </div>
     <div class="col-xs-1">Характер</div>
     <div class="col-xs-1 text-center">
       Возраст <br>
