--- a/sandbox.client/front/ts/app/clients/list.component.html
+++ b/sandbox.client/front/ts/app/clients/list.component.html
@@ -56,7 +56,7 @@
       </div>
       <!-- /////// Характер колонка ///////// ///////////////////////////// переделатьб ////////////////////-->
       <div class="col-xs-1 text-center">
-        {{getCharm(entry.temper)}}
+        {{entry.charm}}
       </div>
       <!-- //////  Возраст ///////////-->
       <div class="col-xs-1 text-center">
