--- a/sandbox.client/front/ts/app/clients/change.component.html
+++ b/sandbox.client/front/ts/app/clients/change.component.html
@@ -30,196 +30,248 @@
       <form *ngIf="errors === 'success'" action="">
         <div class="row">
           <div class="col-xs-4">
-            Имя:
-            <input [(ngModel)]="clientDetails.name"
-                   [ngModelOptions]="{standalone: true}"
-                   (keyup)="updateButton()"
-                   name="name"
-                   type="text" class="inputForm">
-            <span style="color: red">*</span>
-          </div>
-
-          <div class="col-xs-4">
-            Фамилия:
-            <input
-              [(ngModel)]="clientDetails.surname"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              name="surname"
-              type="text" class="inputForm">
-            <span style="color: red">*</span>
+            <div class="row">
+              <div class="col-xs-4">Имя:</div>
+              <div class="col-xs-8">
+                <input [(ngModel)]="clientDetails.name"
+                       [ngModelOptions]="{standalone: true}"
+                       (keyup)="updateButton()"
+                       name="name"
+                       type="text" class="inputForm">
+                <span style="color: red">*</span>
+              </div>
+            </div>
           </div>
           <div class="col-xs-4">
-            Отчество:
-            <input
-              [(ngModel)]="clientDetails.patronymic"
-              [ngModelOptions]="{standalone: true}"
-              name="patronymic"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4">Фамилия:</div>
+              <div class="col-xs-8">
+                <input
+                  [(ngModel)]="clientDetails.surname"
+                  [ngModelOptions]="{standalone: true}"
+                  (keyup)="updateButton()"
+                  name="surname"
+                  type="text" class="inputForm">
+                <span style="color: red">*</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="row">
+              <div class="col-xs-4"> Отчество:</div>
+              <div class="col-xs-8">
+                <input
+                  [(ngModel)]="clientDetails.patronymic"
+                  [ngModelOptions]="{standalone: true}"
+                  name="patronymic"
+                  type="text" class="inputForm">
+              </div>
+            </div>
           </div>
         </div>
         <div class="row">
           <hr>
           <div class="col-xs-4">
-            Пол:
-            <input class="inputForm"
-                   (click)="genderToM(); updateButton()"
-                   [checked]="clientDetails.gender == 'М'"
-                   value="М"
-                   type="radio" name="gender" value="male">
-            Мужской
-            <input
-              (click)="genderToF(); updateButton()"
-              [checked]="clientDetails.gender == 'Ж'"
-              value="Ж"
-              class="inputForm" type="radio" name="gender" value="female">
-            Женский
+            <div class="row">
+              <div class="col-xs-4">Пол:</div>
+              <div class="col-xs-8">
+                <input class="inputForm"
+                       (click)="genderToM(); updateButton()"
+                       [checked]="clientDetails.gender == 'М'"
+                       value="М"
+                       type="radio" name="gender" value="male">
+                Мужской
+                <input
+                  (click)="genderToF(); updateButton()"
+                  [checked]="clientDetails.gender == 'Ж'"
+                  value="Ж"
+                  class="inputForm" type="radio" name="gender" value="female">
+                Женский
+                <span style="color: red">*</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="row">
+              <div class="col-xs-4">Дата рождения:</div>
+              <div class="col-xs-8">
+                <input
+                  (click)="updateButton()"
+                  max="2016-12-30"
+                  [(ngModel)]="clientDetails.dateOfBirth"
+                  [ngModelOptions]="{standalone :true}"
+                  class="inputForm" type="date">
 
-            <span style="color: red">*</span>
+                <span style="color: red">*</span>
+              </div>
+            </div>
           </div>
           <div class="col-xs-4">
-            Дата рождения:
-            <input
-              (click)="updateButton()"
-              [(ngModel)] = "clientDetails.dateOfBirth"
-              [ngModelOptions] = "{standalone :true}"
-              class="inputForm" type="date">
+            <div class="row">
+              <div class="col-xs-4"> Характер:</div>
+              <div class="col-xs-8">
+                <select
+                  (click)="updateButton()"
+                  [(ngModel)]="clientDetails.charm"
+                  class="inputForm" name="temper" id="">
+                  <option *ngFor="let op of charms"
+                          value={{op.name}}>
+                    {{op.name}}
+                  </option>
+                </select>
 
-            <span style="color: red">*</span>
-          </div>
-          <!--ПЕРЕДЕЛАТЬ   /////////////////////////////  -->
-          <div class="col-xs-4">
-            Характер:
-            <select
-              (click)="updateButton()"
-              [(ngModel)]="clientDetails.charm"
-                    class="inputForm" name="temper" id="">
-              <option *ngFor="let op of clientDetails.charms"
-                      value={{op}}>
-                {{op}}
-              </option>
-            </select>
-
-            <span style="color: red">*</span>
-          </div>
-        </div>
-        <div class="row">
-          <hr>
-          <div class="col-xs-12">
-            Адрес проживания (фактический):
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-4">
-            Улица:
-            <input [(ngModel)]="clientDetails.firstAddress[0]"
-                   [ngModelOptions]="{standalone: true}"
-                   (keyup)="updateButton()"
-                   name="ul1"
-                   type="text" class="inputForm">
-          </div>
-          <div class="col-xs-4">
-            Дом:
-            <input
-              [(ngModel)]="clientDetails.firstAddress[1]"
-              [ngModelOptions]="{standalone: true}"
-              name="home1"
-              (keyup)="updateButton()"
-              type="text" class="inputForm">
-          </div>
-          <div class="col-xs-4">
-            Квартира:
-            <input
-              [(ngModel)]="clientDetails.firstAddress[2]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              name="kv1"
-              type="text" class="inputForm">
+                <span style="color: red">*</span>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row">
           <hr>
           <div class="col-xs-12">
-            Адрес регистрации:
+            Адрес проживания (фактический): <br><br>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-4">
-            Улица:
-            <input
-              [(ngModel)]="clientDetails.secondAddress[0]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4">Улица:</div>
+              <div class="col-xs-8">
+                <input [(ngModel)]="clientDetails.firstAddress[0]"
+                       [ngModelOptions]="{standalone: true}"
+                       (keyup)="updateButton()"
+                       name="ul1"
+                       type="text" class="inputForm">
+              </div>
+            </div>
           </div>
           <div class="col-xs-4">
-            Дом:
-            <input
-              [(ngModel)]="clientDetails.secondAddress[1]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              name="asdf"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4">Дом:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.firstAddress[1]"
+                [ngModelOptions]="{standalone: true}"
+                name="home1"
+                (keyup)="updateButton()"
+                type="text" class="inputForm"></div>
+            </div>
           </div>
           <div class="col-xs-4">
-            Квартира:
-            <input
-              [(ngModel)]="clientDetails.secondAddress[2]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              name="asdfasd"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4"> Квартира:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.firstAddress[2]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                name="kv1"
+                type="text" class="inputForm"></div>
+            </div>
+
+
           </div>
         </div>
         <div class="row">
           <hr>
           <div class="col-xs-12">
-            Телефоны:
+            Адрес регистрации: <br><br>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-4">
-            Домашний:
-            <input
-              [(ngModel)]="clientDetails.phones[0]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4">Улица:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.secondAddress[0]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                type="text" class="inputForm"></div>
+            </div>
           </div>
           <div class="col-xs-4">
-            Рабочий:
-            <input
-              [(ngModel)]="clientDetails.phones[1]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4"> Дом:</div>
+              <div class="col-xs-8"> <input
+                [(ngModel)]="clientDetails.secondAddress[1]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                name="asdf"
+                type="text" class="inputForm"></div>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="row">
+              <div class="col-xs-4"> Квартира:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.secondAddress[2]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                name="asdfasd"
+                type="text" class="inputForm"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <hr>
+          <div class="col-xs-12">
+            Телефоны: <br><br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4">
+            <div class="row">
+              <div class="col-xs-4">Домашний:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.phones[0]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                type="text" class="inputForm"></div>
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="row">
+              <div class="col-xs-4">   Рабочий:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.phones[1]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                type="text" class="inputForm"></div>
+            </div>
+
+
           </div>
           <div class="col-xs-4"></div>
         </div>
         <div class="row">
           <div class="col-xs-4">
-            Мобильный 1:
-            <input
-              [(ngModel)]="clientDetails.phones[2]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4"> Мобильный 1:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.phones[2]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                type="text" class="inputForm"></div>
+            </div>
           </div>
           <div class="col-xs-4">
-            Мобильный 2:
-            <input
-              [(ngModel)]="clientDetails.phones[3]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4">     Мобильный 2:</div>
+              <div class="col-xs-8"> <input
+                [(ngModel)]="clientDetails.phones[3]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                type="text" class="inputForm"></div>
+            </div>
+
+
           </div>
           <div class="col-xs-4">
-            Мобильный 3:
-            <input
-              [(ngModel)]="clientDetails.phones[4]"
-              [ngModelOptions]="{standalone: true}"
-              (keyup)="updateButton()"
-              type="text" class="inputForm">
+            <div class="row">
+              <div class="col-xs-4">Мобильный 3:</div>
+              <div class="col-xs-8"><input
+                [(ngModel)]="clientDetails.phones[4]"
+                [ngModelOptions]="{standalone: true}"
+                (keyup)="updateButton()"
+                type="text" class="inputForm"></div>
+            </div>
           </div>
         </div>
         <div class="row">
