--- a/sandbox.client/front/ts/app/clients/list.component.html
+++ b/sandbox.client/front/ts/app/clients/list.component.html
@@ -15,23 +15,31 @@
     <div class="col-xs-1">Характер</div>
     <div class="col-xs-1 text-center">
       Возраст <br>
-      <span *ngIf="sort !== 'age' || sort === ''" (click)="loadSortedList('age')" class="glyphicon glyphicon-sort-by-order"></span>
-      <span *ngIf="sort === 'age'"(click)="loadSortedList('ageDesc')" class="glyphicon glyphicon-sort-by-order-alt"></span>
+      <span *ngIf="sort !== 'age' || sort === ''" (click)="loadSortedList('age')"
+            class="glyphicon glyphicon-sort-by-order"></span>
+      <span *ngIf="sort === 'age'" (click)="loadSortedList('ageDesc')"
+            class="glyphicon glyphicon-sort-by-order-alt"></span>
     </div>
     <div class="col-xs-2 text-center">
       Общий остаток счетов <br>
-      <span *ngIf="sort !== 'total' || sort === ''" (click)="loadSortedList('total')" class="glyphicon glyphicon-sort-by-order"></span>
-      <span *ngIf="sort === 'total'"(click)="loadSortedList('totalDesc')" class="glyphicon glyphicon-sort-by-order-alt"></span>
+      <span *ngIf="sort !== 'total' || sort === ''" (click)="loadSortedList('total')"
+            class="glyphicon glyphicon-sort-by-order"></span>
+      <span *ngIf="sort === 'total'" (click)="loadSortedList('totalDesc')"
+            class="glyphicon glyphicon-sort-by-order-alt"></span>
     </div>
     <div class="col-xs-2 text-center">
       Максимальный остаток <br>
-      <span *ngIf="sort !== 'max' || sort === ''" (click)="loadSortedList('max')" class="glyphicon glyphicon-sort-by-order"></span>
-      <span *ngIf="sort === 'max'"(click)="loadSortedList('maxDesc')" class="glyphicon glyphicon-sort-by-order-alt"></span>
+      <span *ngIf="sort !== 'max' || sort === ''" (click)="loadSortedList('max')"
+            class="glyphicon glyphicon-sort-by-order"></span>
+      <span *ngIf="sort === 'max'" (click)="loadSortedList('maxDesc')"
+            class="glyphicon glyphicon-sort-by-order-alt"></span>
     </div>
     <div class="col-xs-2 text-center">
       Минимальный остаток <br>
-      <span *ngIf="sort !== 'min' || sort === ''" (click)="loadSortedList('min')" class="glyphicon glyphicon-sort-by-order"></span>
-      <span *ngIf="sort === 'min'"(click)="loadSortedList('minDesc')" class="glyphicon glyphicon-sort-by-order-alt"></span>
+      <span *ngIf="sort !== 'min' || sort === ''" (click)="loadSortedList('min')"
+            class="glyphicon glyphicon-sort-by-order"></span>
+      <span *ngIf="sort === 'min'" (click)="loadSortedList('minDesc')"
+            class="glyphicon glyphicon-sort-by-order-alt"></span>
     </div>
     <div class="col-xs-1"></div>
   </div>
@@ -78,7 +86,8 @@
         <button (click)="openModalAddForm()">+</button>
         <button (click)="openModalChangeForm(entry.id)">...</button>
         <button *ngIf="entry.id !== deletingClient" (click)="deleteClient(entry.id)">-</button>
-        <span *ngIf="entry.id === deletingClient" style="font-size: small" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+        <span *ngIf="entry.id === deletingClient" style="font-size: small"
+              class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
       </div>
     </div>
   </div>
@@ -95,17 +104,17 @@
       <div class="small pull-right" style="margin-top: 5%;">
         Скачать список в формате:
         <select
-        [(ngModel)] = "fileTypeForDownload"
+          [(ngModel)]="fileTypeForDownload"
         >
-          <option value="pdf">
+          <option value="application/pdf">
             PDF
           </option>
-          <option value="xlsx">
+          <option value="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
             XSLX
           </option>
         </select>
         <br>
-        <button (click)="loadFile()">Скачать</button>
+        <button (click)="loadFile()" [disabled]="!fileTypeForDownload">Скачать</button>
       </div>
     </div>
   </div>
