--- a/sandbox.client/front/ts/app/clients/change.component.html
+++ b/sandbox.client/front/ts/app/clients/change.component.html
@@ -77,15 +77,15 @@
               <div class="col-xs-8">
                 <input class="inputForm"
                        (click)="genderToM(); updateButton()"
-                       [checked]="clientDetails.gender == 'М'"
-                       value="М"
-                       type="radio" name="gender" value="male">
+                       [checked]="clientDetails.gender == 'male'"
+                       value="male"
+                       type="radio" name="gender">
                 Мужской
                 <input
                   (click)="genderToF(); updateButton()"
-                  [checked]="clientDetails.gender == 'Ж'"
-                  value="Ж"
-                  class="inputForm" type="radio" name="gender" value="female">
+                  [checked]="clientDetails.gender == 'female'"
+                  value="female"
+                  class="inputForm" type="radio" name="gender">
                 Женский
                 <span style="color: red">*</span>
               </div>
@@ -115,7 +115,7 @@
                   [(ngModel)]="clientDetails.charmId"
                   class="inputForm" name="temper" id="">
                   <option *ngFor="let op of charms"
-                          value={{op.name}}>
+                          value={{op.id}}>
                     {{op.name}}
                   </option>
                 </select>
