Добавила поля клиенту, создала в базе данных модель ClientDot

--- a/sandbox.client/front/ts/app/clients/client-list.component.html
+++ b/sandbox.client/front/ts/app/clients/client-list.component.html
@@ -11,6 +11,14 @@
       <th>Минимальный остаток</th>
       <th></th>
     </tr>
+    <tr *ngFor="let ClientRecord of ClientList">
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
 
     </tbody>
   </table>
