Добавила стили для списка клиентов, кнопок и главной формы

--- a/sandbox.client/front/ts/app/clients/client-list.component.html
+++ b/sandbox.client/front/ts/app/clients/client-list.component.html
@@ -9,9 +9,8 @@
       <th>Общий остаток счетов</th>
       <th>Максимальный остаток</th>
       <th>Минимальный остаток</th>
-      <th></th>
     </tr>
-    <tr *ngFor="let ClientRecord of ClientList">
+    <tr>
       <td></td>
       <td></td>
       <td></td>
@@ -22,5 +21,9 @@
 
     </tbody>
   </table>
+
+  <div><button class="buttonStyle editingButtons">+</button></div>
+  <div><button class="buttonStyle editingButtons">...</button></div>
+  <div><button class="buttonStyle editingButtons">-</button></div>
 
 </div>
