--- a/sandbox.client/front/ts/app/forms/modal-form.component.html
+++ b/sandbox.client/front/ts/app/forms/modal-form.component.html
@@ -11,27 +11,29 @@
       </div>
       <div class="field">
         <label>Отчество</label>
-        <inpu name="patronymic" type="text" ngModel="{{client.patronymic}}"/>
+        <input name="patronymic" type="text" ngModel="{{client.patronymic}}"/>
       </div>
       <div class="field">
         <label>Пол</label>
+        <div class="radioButton">
         <p><input name="gender" type="radio" value="male" ngModel="{{client.gender}}"/>Мужской</p>
         <p><input name="gender" type="radio" value="female" ngModel="{{client.gender}}"/>Женский</p>
+        </div>
       </div>
       <div class="field">
         <label>Дата рождения</label>
-        <input type="date" name="birth_date" ngModel="{{client.birth_date}}"/>
+        <input id="birthDate" type="date" name="birth_date" ngModel="{{client.birth_date}}"/>
       </div>
-      <div>
+      <div class="field">
         <label>Характер</label>
-          <select name="charm" ngModel="{{client.charm}}">
+          <select id="selectCharm" name="charm" ngModel="{{client.charm}}">
             <option *ngFor="let charm of charms" value="charm">
               {{charm}}
             </option>
           </select>
      </div>
 
-      <div class="field">Адрес проживания</div>
+      <div class="text-inscription">Адрес проживания</div>
       <div class="field">
         <label>Улица</label>
         <input name="factAddrStreet" ngModel="{{client.factAddrStreet}}"/>
@@ -45,7 +47,7 @@
         <input name="factAddrFlat" ngModel="{{client.factAddrFlat}}"/>
       </div>
 
-      <div class="field">Адрес регистрации</div>
+      <div class="text-inscription">Адрес регистрации</div>
       <div class="field">
         <label>Улица</label>
         <input name="regAddrStreet" ngModel="{{client.regAddrStreet}}"/>
@@ -59,7 +61,7 @@
         <input name="regAddrFlat" ngModel="{{client.regAddrFlat}}"/>
       </div>
 
-      <div class="field">Телефоны</div>
+      <div class="text-inscription">Телефоны</div>
       <div class="field">
         <label>Домашний</label>
         <input type="number" name="homePhone" ngModel="{{client.homePhone}}"/>
@@ -74,8 +76,8 @@
       </div>
 
       <div>
-        <button (click)="addClient()">Добавить</button>
-        <button (click)="closeModalForm()">Закрыть</button>
+        <button class="modalButtons" (click)="addClient()">Добавить</button>
+        <button class="modalButtons" (click)="closeModalForm()">Закрыть</button>
       </div>
     </div>
   </form>
