--- a/sandbox.client/front/styles/client-list.less
+++ b/sandbox.client/front/styles/client-list.less
@@ -1,45 +1,52 @@
-table.client-list th {
-  padding-left: 0.3rem;
-  padding-right: 0.3rem;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-}
-table {
-  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+table.client-list {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif, serif;
   font-size: 14px;
   border-collapse: collapse;
   text-align: center;
   margin-left: 25%;
   margin-top: 2%;
+
+  th, td {
+    color: white;
+  }
+
+  td {
+    background: #AFCDE7;
+    padding: 10px 20px;
+  }
+
+  th {
+    background-color: #00415d;
+
+    padding: 0.3rem;
+  }
+
+
+  th:first-child, td:first-child {
+    text-align: left;
+  }
+
+  tr.active td {
+    background-color: #1CA347;
+  }
 }
-th, td {
-  background-color: #00415d;
-  color: white;
-  padding: 10px 20px;
-}
-th, td {
-  border-style: solid;
-  border-width: 0 1px 1px 0;
-  border-color: white;
-}
-td {
-  background: #AFCDE7;
-}
-th:first-child, td:first-child {
-  text-align: left;
-}
+
+
 body {
   background-color: aliceblue;
 }
+
 .buttonStyle {
   text-align: center;
   font-size: 15px;
 }
-.editingButtons{
+
+.editingButtons {
   margin-left: 65%;
   margin-bottom: 10%;
   font-size: 20px;
 }
+
 .buttonStyle {
   display: inline-block;
   color: #00415d;
@@ -48,9 +55,12 @@ body {
   outline: none;
   border-width: 2px 0;
   border-style: solid none;
-  border-color:  aliceblue;
+  border-color: aliceblue;
   border-radius: 6px;
   background: linear-gradient(#53A3CD, #ffffff) #53A3CD;
   transition: 0.2s;
 }
-.buttonStyle:hover { background: linear-gradient(#53A3CD, #AFCDE7) #53A3CD; }
+
+.buttonStyle:hover {
+  background: linear-gradient(#53A3CD, #AFCDE7) #53A3CD;
+}
