--- a/sandbox.client/front/ts/app/clients/client-list.component.html
+++ b/sandbox.client/front/ts/app/clients/client-list.component.html
@@ -10,8 +10,9 @@
       <th>Максимальный остаток</th>
       <th>Минимальный остаток</th>
     </tr>
-    <tr>
-      <td></td>
+
+    <tr *ngFor="let record of list" [ngClass]="{active: selectedId === record.id}" (click)="selectedId = record.id">
+      <td>{{record.fio}}</td>
       <td></td>
       <td></td>
       <td></td>
@@ -21,11 +22,15 @@
 
     </tbody>
   </table>
-  <div><button class="buttonStyle editingButtons" (click)="addClient()">+</button></div>
-  <div><button class="buttonStyle editingButtons">...</button></div>
-  <div><button class="buttonStyle editingButtons">-</button></div>
+  <div>
+    <button class="buttonStyle editingButtons" (click)="addClient()">+</button>
+  </div>
+  <div>
+    <button class="buttonStyle editingButtons" (click)="editClient()" [disabled]="!selectedId">...</button>
+  </div>
+  <div>
+    <button class="buttonStyle editingButtons">-</button>
+  </div>
 
-  <modal-form-component
-    *ngIf="showModal"
-    (closeModal)="closeModalForm()"></modal-form-component>
+  <client-form #clientForm></client-form>
 </div>
