--- a/sandbox.client/front/ts/app/clients/list.component.html
+++ b/sandbox.client/front/ts/app/clients/list.component.html
@@ -80,7 +80,7 @@
       </div>
       <!-- //////// Минимальный счет-->
       <div class="col-xs-2 text-center">
-        {{entry.id}}
+        {{entry.minAccountBalance}}
       </div>
       <div class="col-xs-1">
         <button (click)="openModalAddForm()">+</button>
