--- a/sandbox.client/front/ts/app/clients/list.component.html
+++ b/sandbox.client/front/ts/app/clients/list.component.html
@@ -109,7 +109,7 @@
           <option value="application/pdf">
             PDF
           </option>
-          <option value="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
+          <option selected = "true" value="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
             XSLX
           </option>
         </select>
