--- a/sandbox.client/front/ts/app/client/client-list-component.css
+++ b/sandbox.client/front/ts/app/client/client-list-component.css
@@ -2,70 +2,61 @@ body {
   padding-top: 90px;
 }
 
-table th {
-  text-align: center;
+.btn-control:disabled {
+  background: #666666;
 }
 
-table th, table td {
-  padding: 10px;
-}
-
-.btn-change-info {
-  background-color: #59B2E0;
-  outline: none;
-  color: #fff;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 14px;
-  text-transform: uppercase;
-  border-color: #59B2E6;
-  display: block;
-  margin: 8px;
-}
-.btn-login:hover,
-.btn-login:focus {
-  color: #fff;
-  background-color: #53A3CD;
-  border-color: #53A3CD;
-}
-
-.btn-sort {
-  background-color: #59B2E0;
-  outline: none;
-  color: #fff;
-  font-size: 10px;
-  font-weight: bold;
-  padding: 4px;
-  text-transform: uppercase;
-  border-color: #59B2E6;
-  display: inline;
-}
-.btn-sort:hover,
-.btn-sort:focus {
-  color: #fff;
-  background-color: #53A3CD;
-  border-color: #53A3CD;
-}
-
-.btn-list-number {
-  background-color: #59B2E0;
-  outline: none;
-  color: #fff;
-  font-size: 14px;
-  padding: 4px;
-  margin: 4px ;
-  text-transform: uppercase;
-  border-color: #59B2E6;
-}
-.btn-list-number:hover,
-.btn-list-number:focus {
-  color: #fff;
-  background-color: #53A3CD;
-  border-color: #53A3CD;
-}
-
-.table-header {
-  font-size: 14px;
-  text-align: center;
+.center-all {
   vertical-align: middle;
+  text-align: center;
+}
+
+.sort-button-active {
+  color: black;
+  background: #1CA347;
+  font-weight: bold;
+}
+
+table {
+  border-collapse: separate;
+  background: #fff;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border-color: darkgray;
+  -moz-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+thead {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+thead th {
+  color: black;
+  font-size: 16px;
+  background-size: 100%;
+  background: lightgray;
+}
+
+tbody tr td {
+  border-color: darkgray;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 400;
+  color: black;
+}
+
+tbody:hover > tr:hover td {
+  text-shadow: none;
+  color: #888888;
+  opacity: 1;
+  transition: 0.2s all;
+}
+
+.client-record {
+
 }
